fixing assign endpoint to read statuses
